--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <img src="tu-logo.png" alt="IAware Logo" class="logo"/>
-    <h1>IAware DAO Governance</h1>
+   <img src="iaware-logo.png" alt="IAware Logo" class="logo"/>
+  <h1>IAware DAO Governance</h1>
   </header>
   <main>
     <section id="proposals">
